@@ -169,7 +169,8 @@
 	<FORM METHOD="POST" NAME="page" id="page-form" ACTION="?m=documentedit&action=confirm">
 	{foreach $documentlist as $doc}
 	{assign var=docid value=$doc.docid}
-	<TR class="highlight{if $doc.closed} lms-ui-document-closed{/if}{if $doc.archived} lms-ui-document-archived{/if}" data-archived="{if $doc.archived}1{else}0{/if}" data-closed="{if $doc.closed}1{else}0{/if}">
+	<TR class="highlight{if $doc.closed} lms-ui-document-closed{/if}{if $doc.archived} lms-ui-document-archived{/if}" data-archived="{if $doc.archived}1{else}0{/if}" data-closed="{if $doc.closed}1{else}0{/if}"
+		data-senddate="{if $doc.senddate}{$doc.senddate|date_format:"%Y-%m-%d"}{else}{$doc.senddate}{/if}">
 		<TD class="nobr" onclick="window.open('?m=documentview&amp;id={$doc.docid}');"{if $doc.description} {tip text=$doc.description}{/if}>
 			{$doc.cdate|date_format:"%Y/%m/%d %H:%M"}{if $doc.sdate} / {$doc.sdate|date_format:"%Y/%m/%d %H:%M"}{/if}
 			{if $doc.number}<BR>
@@ -195,8 +196,8 @@
 		<TD class="nobr"><A href="?m=customerinfo&amp;id={$doc.customerid}">{$doc.name|truncate:40:"...":true}</A></TD>
 		<TD class="text-right nobr">
 			{if $doc.senddocuments}
-				{button type="link" class="send-document" icon="mail" href="?m=documentsend&id={$doc.docid}"
-					tip="Document send"}
+				{button type="link" class="send-document" icon="{if $doc.senddate}mailsent{else}mail{/if}" href="?m=documentsend&id={$doc.docid}"
+					tip="{if $doc.senddate}Send document again{else}Document send{/if}"}
 			{/if}
 			{assign var=type value=$doc.type}
 			{button type="link" icon="save" href="?m=documentview&id={$doc.docid}&save=1" tip="Save"}
@@ -363,9 +364,16 @@
 	});
 
 	$('.send-document').click(function() {
-		confirmDialog($t("Are you sure, you want to send document to customer?"), this).done(function() {
-			window.open($(this).attr('href'));
-		});
+		var senddate = $(this).closest('tr').attr('data-senddate');
+		if (parseInt(senddate) === 0) {
+			confirmDialog($t("Are you sure, you want to send document to customer?"), this).done(function () {
+				window.open($(this).attr('href'));
+			});
+		} else {
+            confirmDialog($t("Document was sent to customer already on $a. Are you sure, you want to send document again?", senddate), this).done(function () {
+                window.open($(this).attr('href'));
+            });
+        }
 		return false;
 	});
 
